# OtrPipeTp

./: .gitignore  CMakeLists.txt
Modules/: FindLibgpg_error.cmake
data/: CMakeLists.txt  OtrPipe-telepathy.service.in
src/: CMakeLists.txt  connection.cpp  connections.hpp  main.cpp  otr_channel.hpp  otr_encryption.cpp  otr_encryption.hpp  otr_pipe.cpp  otr_pipe.hpp  pipe.cpp  pipe.hpp
tests/: CMakeLists.txt  encryption_decryption_test.cpp
